Fixes #553